--- a/scripts/pisec.service
+++ b/scripts/pisec.service
@@ -3,8 +3,11 @@ Description=Pi Security Camera
 After=multi-user.target
 
 [Service]
+User=pi
 Type=idle
-ExecStart=/usr/bin/python /home/pi/pisec/securityCamera.py > /home/pi/pisec/pisec.log 2>&1
+ExecStart=/usr/bin/python /home/pi/pisec/securityCamera.py
+StandardOutput=journal
+StandardError=journal
 
 [Install]
 WantedBy=multi-user.target
